<resources>
    <string name="app_name">OsusumeSan</string>
    <string name="gloss_title">Title</string>
    <string name="gloss_details">Details</string>
    <string name="hide_furigana">hide furigana</string>
    <string name="show_furigana">show furigana</string>

    <string name="btnPrevTxt">Prev</string>
    <string name="btnNextTxt">Next</string>

    <string name="inputTextTitle">Input text to generate furigana</string>
    <string name="btnInputText">Process Text</string>
    <string name="inputTextHint">input your text here</string>

    <string name="btnReadingList">Reading List</string>
    <string name="btnResumeReading">Resume Last Reading</string>
    <string name="btnInputText_MenuPage">Input Text</string>
    <string name="btnSettings">Settings</string>
    <string name="btnSearch">Search Dictionary</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Knowledge Model Preferences -->
    <string name="knowledge_header">Knowledge Model</string>
    <string name="knowledge_summary">Select known levels</string>

    <string name="tobira_title">Tobira</string>
    <string name="tobira_key">tobira_preference</string>
    <string name="genki1_title">Genki 1</string>
    <string name="genki1_key">genki_1_preference</string>
    <string name="genki2_title">Genki 2</string>
    <string name="genki2_key">genki_2_preference</string>
    <string name="n1_title">JLPT N1</string>
    <string name="n1_key">n1_preference</string>
    <string name="n2_title">JLPT N2</string>
    <string name="n2_key">n2_preference</string>
    <string name="n3_title">JLPT N3</string>
    <string name="n3_key">n3_preference</string>
    <string name="n4_title">JLPT N4</string>
    <string name="n4_key">n4_preference</string>
    <string name="n5_title">JLPT N5</string>
    <string name="n5_key">n5_preference</string>
    <string name="btnEditKnowledge">Edit Known Words</string>


    <!-- Display Preferences -->
    <string name="display_header">Display Settings</string>
    <string name="furigana_tapper_title">Furigana Tapper</string>
    <string name="furigana_tapper_summary">Max times to display for new words</string>

    <!-- Reading list-->
    <string name="reading_list_title">Title</string>
    <string name="reading_list_level">Difficulty</string>
    <string name="reading_list_known_words">% Known Words</string>
    <string name="reading_list_article_summary">Loading details</string>
    <string name="title_activity_reading_list">Reading List</string>

    <!-- Knowledge list -->
    <string name="knowledge_list_isknown">Is Known</string>
    <string name="knowledge_list_word">Word</string>
    <string name="knowledge_list_reading">Reading</string>
    <string name="btnAddKnowledge">Add new word</string>

    <string name="search_title">Search Dictionary</string>
    <string name="no_result_text">Search Jisho for words.\nSearch allows English, Japense, or Romaji.</string>
    <string name="vocab_title">vocab menu</string>
    <string name="search_header">Current Reading\'s Vocab List</string>

</resources>