<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8"
        >

        <TextView
            android:id="@+id/textViewInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputTextTitle"
            android:textSize="@dimen/font_size_20"
            android:layout_margin="10dp"

            />

        <EditText
            android:id="@+id/editTextInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:autofillHints="@string/inputTextHint"
            android:inputType="textPersonName"
            android:text="Name"
            android:layout_weight="7"
            />

        <Button
            android:id="@+id/btnInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnInputText"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>