<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.KnowledgeListActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/knowledge_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/knowledge_list_isknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knowledge_list_isknown"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/knowledge_list_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knowledge_list_word"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"
            android:layout_weight="2"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/knowledge_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        android:layout_below="@id/knowledge_list_header"
        android:layout_above="@id/knowledgeListBottomLinearLayout"

        />
    <LinearLayout
        android:id="@+id/knowledgeListBottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/btnAddKnowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAddKnowledge"
            android:layout_marginVertical="8dp"
            />
    </LinearLayout>
</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>